// Vitest Snapshot v1

exports[`lib/notion/update-upcoming-weather > updates upcoming quest dates with temperature and conditions > block-6-update 1`] = `
{
  "object": "block",
  "paragraph": {
    "color": "default",
    "rich_text": [
      {
        "text": {
          "content": "Tue, 12/28    ",
        },
      },
      {
        "text": {
          "content": "⛅️ ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "45°",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": " / ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "66°",
        },
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`lib/notion/update-upcoming-weather > updates upcoming quest dates with temperature and conditions > block-8-update 1`] = `
{
  "object": "block",
  "paragraph": {
    "color": "default",
    "rich_text": [
      {
        "text": {
          "content": "Wed, 12/29    ",
        },
      },
      {
        "text": {
          "content": "⛅️ ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "43°",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": " / ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "66°",
        },
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`lib/notion/update-upcoming-weather > updates upcoming quest dates with temperature and conditions > block-10-update 1`] = `
{
  "object": "block",
  "paragraph": {
    "color": "default",
    "rich_text": [
      {
        "text": {
          "content": "Thu, 12/30    ",
        },
      },
      {
        "text": {
          "content": "☔️ ",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": "(85%) ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "33°",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": " / ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "54°",
        },
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`lib/notion/update-upcoming-weather > updates upcoming quest dates with temperature and conditions > block-12-update 1`] = `
{
  "object": "block",
  "paragraph": {
    "color": "default",
    "rich_text": [
      {
        "text": {
          "content": "Fri, 12/31    ",
        },
      },
      {
        "text": {
          "content": "❄️ ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "25°",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": " / ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "51°",
        },
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`lib/notion/update-upcoming-weather > updates upcoming quest dates with temperature and conditions > block-14-update 1`] = `
{
  "object": "block",
  "paragraph": {
    "color": "default",
    "rich_text": [
      {
        "text": {
          "content": "Sat, 1/1    ",
        },
      },
      {
        "text": {
          "content": "⛅️ ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "26°",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": " / ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "51°",
        },
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`lib/notion/update-upcoming-weather > updates upcoming quest dates with temperature and conditions > block-16-update 1`] = `
{
  "object": "block",
  "paragraph": {
    "color": "default",
    "rich_text": [
      {
        "text": {
          "content": "Sun, 1/2    ",
        },
      },
      {
        "text": {
          "content": "⛅️ ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "29°",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": " / ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "63°",
        },
      },
    ],
  },
  "type": "paragraph",
}
`;
